--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="social-links">
             <a href="https://github.com/candela-sv" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/candela-simón-verdaguer/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="candela.simon.verdaguer@gmail.com"><i class="fas fa-envelope"></i></a>
+            <a href="mailto:candela.simon.verdaguer@gmail.com"><i class="fas fa-envelope"></i></a>
         </div>
     </header>
 
@@ -46,17 +46,33 @@
             </ul>
         </div>
     </section>
+    
+    <section id="education" class="container">
+        <h2>Education</h2>
+        <div class="education-card">
+            <h3>CFGS Desarrollo de aplicaciones multiplataforma</h3>
+            <span class="institution">Prat Educació</span>
+            <span class="date">2023 - 2025</span>
+            <span class="location">Barcelona, Cataluña, Spain</span>
+        </div>
+        <div class="education-card">
+            <h3>Bachillerato Tecnológico</h3>
+            <span class="institution">IES María Espinalt</span>
+            <span class="date">2021 - 2023</span>
+            <span class="location">Barcelona, Cataluña, Spain</span>
+        </div>
+    </section>    
 
     <section id="skills" class="container">
         <h2>Skills</h2>
         <div class="skills-grid">
             <div class="skill-card">
                 <i class="fab fa-html5"></i>
-                <h3>HTML5</h3>
+                <h3>HTML</h3>
             </div>
             <div class="skill-card">
                 <i class="fab fa-css3-alt"></i>
-                <h3>CSS3</h3>
+                <h3>CSS</h3>
             </div>
             <div class="skill-card">
                 <i class="fab fa-js"></i>
