--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
 
     <section id="experience" class="container">
         <h2>Experience</h2>
+
+        <div class="experience-card">
+            <div class="experience-header">
+                <h3>Operations Assistant</h3>
+                <span class="company">B:SM - Park Güell</span>
+                <span class="date">June 2024 - September 2024</span>
+                <span class="location">Barcelona, Catalonia, Spain</span>
+            </div>
+            <ul class="experience-details">
+                <li>Provided assistance and support to visitors, managing inquiries, incidents, and information regarding park services.</li>
+                <li>Coordinated access control and visitor flow to ensure a smooth and satisfactory experience.</li>
+            </ul>
+        </div>
+
         <div class="experience-card">
             <div class="experience-header">
                 <h3>Frontend Developer</h3>
