--- a/index.html
+++ b/index.html
@@ -32,24 +32,12 @@
     <section id="experience" class="container">
         <h2>Experience</h2>
 
-        <div class="experience-card">
-            <div class="experience-header">
-                <h3>Operations Assistant</h3>
-                <span class="company">B:SM - Park Güell</span>
-                <span class="date">June 2024 - September 2024</span>
-                <span class="location">Barcelona, Catalonia, Spain</span>
-            </div>
-            <ul class="experience-details">
-                <li>Provided assistance and support to visitors, managing inquiries, incidents, and information regarding park services.</li>
-                <li>Coordinated access control and visitor flow to ensure a smooth and satisfactory experience.</li>
-            </ul>
-        </div>
-
+        <!-- Firechip (más reciente, aparece primero) -->
         <div class="experience-card">
             <div class="experience-header">
                 <h3>Frontend Developer</h3>
                 <span class="company">Firechip</span>
-                <span class="date">November 2024 - Present</span>
+                <span class="date">November 2024 - January 2025</span>
                 <span class="location">Barcelona, Catalonia, Spain · On-site</span>
             </div>
             <ul class="experience-details">
@@ -59,8 +47,23 @@
                 <li>Contributed to the development of user interfaces for IoT and mobile device management applications, focusing on user experience and responsive design.</li>
             </ul>
         </div>
+
+        <!-- Park Güell (segundo en la lista) -->
+        <div class="experience-card">
+            <div class="experience-header">
+                <h3>Operations Assistant</h3>
+                <span class="company">B:SM - Park Güell</span>
+                <span class="date">June 2024 - September 2024</span>
+                <span class="location">Barcelona, Catalonia, Spain</span>
+            </div>
+            <ul class="experience-details">
+                <li>Provided assistance and support to visitors, handling inquiries, incidents, and information regarding park services.</li>
+                <li>Managed access control and monitored visitor flow to ensure a smooth experience.</li>
+                <li>Collaborated with the operations team to maintain a welcoming and safe environment.</li>
+            </ul>
+        </div>
     </section>
-    
+
     <section id="education" class="container">
         <h2>Education</h2>
         <div class="education-card">
