--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     </header>
 
     <section id="about" class="container">
-        <h2>About me</h2>
+        <h2>About Me</h2>
         <p>
-            I'm a frontend developer passionate about creating intuitive and engaging web experiences. 
+            I am a frontend developer passionate about creating intuitive and engaging web experiences. 
             I specialize in building modern web applications using the latest technologies and 
-            following development best practices. With solid knowledge in both frontend and 
-            backend, I can develop complete and scalable web solutions.
+            following development best practices. With a strong knowledge of both frontend and backend, 
+            I can develop complete and scalable web solutions.
         </p>
     </section>
 
     <section id="experience" class="container">
         <h2>Experience</h2>
 
-        <!-- Firechip (más reciente, aparece primero) -->
+        <!-- Firechip (Most recent, appears first) -->
         <div class="experience-card">
             <div class="experience-header">
                 <h3>Frontend Developer</h3>
@@ -48,7 +48,7 @@
             </ul>
         </div>
 
-        <!-- Park Güell (segundo en la lista) -->
+        <!-- Park Güell (Second in the list) -->
         <div class="experience-card">
             <div class="experience-header">
                 <h3>Operations Assistant</h3>
@@ -67,16 +67,16 @@
     <section id="education" class="container">
         <h2>Education</h2>
         <div class="education-card">
-            <h3>CFGS Desarrollo de aplicaciones multiplataforma</h3>
+            <h3>Higher Vocational Training in Multiplatform Application Development</h3>
             <span class="institution">Prat Educació</span>
             <span class="date">2023 - 2025</span>
-            <span class="location">Barcelona, Cataluña, Spain</span>
+            <span class="location">Barcelona, Catalonia, Spain</span>
         </div>
         <div class="education-card">
-            <h3>Bachillerato Tecnológico</h3>
+            <h3>Technological Baccalaureate</h3>
             <span class="institution">IES María Espinalt</span>
             <span class="date">2021 - 2023</span>
-            <span class="location">Barcelona, Cataluña, Spain</span>
+            <span class="location">Barcelona, Catalonia, Spain</span>
         </div>
     </section>    
 
