Primera versió del portfolio

--- a/index.html
+++ b/index.html
@@ -3,63 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Candela Simón - Frontend Developer</title>
+    <title>Margalida Ferriol Torres - Frontend Developer</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <header>
-        <img src="candela-pfp.jpg" alt="Candela Simón" class="profile-img">
-        <h1>Candela Simón</h1>
+        <img src="margalida-pfp.jpg" alt="Margalida Ferriol Torres" class="profile-img">
+        <h1>Margalida Ferriol Torres</h1>
         <p class="role">Frontend Developer</p>
         <div class="social-links">
-            <a href="https://github.com/candela-sv" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/candela-simón-verdaguer/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="mailto:candela.simon.verdaguer@gmail.com"><i class="fas fa-envelope"></i></a>
+            <a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/margalida-ferriol-torres/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="mailto:mferrioltorres@gmail.com"><i class="fas fa-envelope"></i></a>
         </div>
     </header>
 
     <section id="about" class="container">
         <h2>About me</h2>
         <p>
-            I'm a frontend developer passionate about creating intuitive and engaging web experiences. 
-            I specialize in building modern web applications using the latest technologies and 
-            following development best practices. With solid knowledge in both frontend and 
-            backend, I can develop complete and scalable web solutions.
+            I'm a passionate frontend developer currently studying Multiplatform Application Development at Prat Educació. 
+            I love building apps, exploring new technologies, and working collaboratively. 
+            My experience spans from coding to volunteering, customer service, and working with kids with special needs.
         </p>
     </section>
 
     <section id="experience" class="container">
         <h2>Experience</h2>
 
-        <!-- Firechip (más reciente, aparece primero) -->
         <div class="experience-card">
             <div class="experience-header">
-                <h3>Frontend Developer</h3>
+                <h3>Frontend Developer (Intern)</h3>
                 <span class="company">Firechip</span>
-                <span class="date">November 2024 - January 2025</span>
-                <span class="location">Barcelona, Catalonia, Spain · On-site</span>
-            </div>
-            <ul class="experience-details">
-                <li>Developed and maintained design systems with React for multiple brands, ensuring consistency and scalability across various applications.</li>
-                <li>Built Progressive Web Apps with a focus on performance, accessibility, and offline functionality.</li>
-                <li>Collaborated with backend developers to integrate GraphQL APIs, enabling efficient data fetching and management.</li>
-                <li>Contributed to the development of user interfaces for IoT and mobile device management applications, focusing on user experience and responsive design.</li>
-            </ul>
-        </div>
-
-        <!-- Park Güell (segundo en la lista) -->
-        <div class="experience-card">
-            <div class="experience-header">
-                <h3>Operations Assistant</h3>
-                <span class="company">B:SM - Park Güell</span>
-                <span class="date">June 2024 - September 2024</span>
+                <span class="date">Nov 2024 - Apr 2025</span>
                 <span class="location">Barcelona, Catalonia, Spain</span>
             </div>
             <ul class="experience-details">
-                <li>Provided assistance and support to visitors, handling inquiries, incidents, and information regarding park services.</li>
-                <li>Managed access control and monitored visitor flow to ensure a smooth experience.</li>
-                <li>Collaborated with the operations team to maintain a welcoming and safe environment.</li>
+                <li>Developed and maintained React design systems for multiple brands.</li>
+                <li>Built PWAs with focus on performance and accessibility.</li>
+                <li>Integrated GraphQL APIs for efficient data fetching.</li>
+                <li>Worked on responsive UIs for IoT and mobile device apps.</li>
+            </ul>
+        </div>
+
+        <div class="experience-card">
+            <div class="experience-header">
+                <h3>Leisure Monitor Intern</h3>
+                <span class="company">Eix Estels</span>
+                <span class="date">July 2024</span>
+                <span class="location">Catalonia, Spain</span>
+            </div>
+            <ul class="experience-details">
+                <li>Led and organized leisure activities for children, including those with special needs.</li>
+            </ul>
+        </div>
+
+        <div class="experience-card">
+            <div class="experience-header">
+                <h3>Customer Service Assistant (Freelance)</h3>
+                <span class="company">Fet de Ferro</span>
+                <span class="date">June - Sept 2024</span>
+                <span class="location">Mallorca, Balearic Islands</span>
+            </div>
+            <ul class="experience-details">
+                <li>Handled customer service and administrative tasks including billing review and filing.</li>
+            </ul>
+        </div>
+
+        <div class="experience-card">
+            <div class="experience-header">
+                <h3>Board Member</h3>
+                <span class="company">Sindicat d'Estudiants IES Llorenç Garcías i Font</span>
+                <span class="date">2018 - 2023</span>
+                <span class="location">Artà, Mallorca</span>
+            </div>
+            <ul class="experience-details">
+                <li>Organized educational events and defended student rights and wellbeing.</li>
             </ul>
         </div>
     </section>
@@ -67,59 +86,50 @@
     <section id="education" class="container">
         <h2>Education</h2>
         <div class="education-card">
-            <h3>CFGS Desarrollo de aplicaciones multiplataforma</h3>
+            <h3>CFGS Multiplatform Application Development</h3>
             <span class="institution">Prat Educació</span>
             <span class="date">2023 - 2025</span>
-            <span class="location">Barcelona, Cataluña, Spain</span>
+            <span class="location">Barcelona, Catalonia</span>
         </div>
         <div class="education-card">
-            <h3>Bachillerato Tecnológico</h3>
-            <span class="institution">IES María Espinalt</span>
+            <h3>Technological Baccalaureate</h3>
+            <span class="institution">IES Llorenç Garcías i Font</span>
             <span class="date">2021 - 2023</span>
-            <span class="location">Barcelona, Cataluña, Spain</span>
+            <span class="location">Artà, Mallorca</span>
         </div>
-    </section>    
+        <div class="education-card">
+            <h3>Summer Course "Create your own app"</h3>
+            <span class="institution">UAB</span>
+            <span class="date">2021 - 2022</span>
+        </div>
+    </section>
 
     <section id="skills" class="container">
         <h2>Skills</h2>
         <div class="skills-grid">
-            <div class="skill-card">
-                <i class="fab fa-html5"></i>
-                <h3>HTML</h3>
-            </div>
-            <div class="skill-card">
-                <i class="fab fa-css3-alt"></i>
-                <h3>CSS</h3>
-            </div>
-            <div class="skill-card">
-                <i class="fab fa-js"></i>
-                <h3>JavaScript</h3>
-            </div>
-            <div class="skill-card">
-                <i class="fab fa-react"></i>
-                <h3>React</h3>
-            </div>
-            <div class="skill-card">
-                <i class="fab fa-java"></i>
-                <h3>Java</h3>
-            </div>
-            <div class="skill-card">
-                <i class="fas fa-database"></i>
-                <h3>MySQL</h3>
-            </div>
-            <div class="skill-card">
-                <i class="fab fa-git-alt"></i>
-                <h3>Git</h3>
-            </div>
-            <div class="skill-card">
-                <i class="fas fa-mobile-alt"></i>
-                <h3>Responsive</h3>
-            </div>
+            <div class="skill-card"><i class="fab fa-html5"></i><h3>HTML</h3></div>
+            <div class="skill-card"><i class="fab fa-css3-alt"></i><h3>CSS</h3></div>
+            <div class="skill-card"><i class="fab fa-js"></i><h3>JavaScript</h3></div>
+            <div class="skill-card"><i class="fab fa-react"></i><h3>React</h3></div>
+            <div class="skill-card"><i class="fab fa-java"></i><h3>Java</h3></div>
+            <div class="skill-card"><i class="fas fa-database"></i><h3>MySQL</h3></div>
+            <div class="skill-card"><i class="fab fa-git-alt"></i><h3>Git</h3></div>
+            <div class="skill-card"><i class="fas fa-file-code"></i><h3>Overleaf</h3></div>
+            <div class="skill-card"><i class="fab fa-python"></i><h3>Python</h3></div>
         </div>
     </section>
 
+    <section id="languages" class="container">
+        <h2>Languages</h2>
+        <ul>
+            <li>Catalan: Native</li>
+            <li>Spanish: Native</li>
+            <li>English: B2</li>
+        </ul>
+    </section>
+
     <footer>
-        <p>&copy; 2024 Candela Simón. All rights reserved.</p>
+        <p>&copy; 2025 Margalida Ferriol Torres. All rights reserved.</p>
     </footer>
 </body>
 </html>
