--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="margalida-pfp.jpg" alt="Margalida Ferriol Torres" class="profile-img">
+        <img src="margalida.png" alt="Margalida Ferriol Torres" class="profile-img">
         <h1>Margalida Ferriol Torres</h1>
         <p class="role">Frontend Developer</p>
         <div class="social-links">
