--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1>Margalida Ferriol Torres</h1>
                 <p class="role">Desenvolupadora Frontend</p>
                 <div class="social-links">
-                    <a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/maargaafeerriiool" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/margalida-ferriol-torres/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="mailto:mferrioltorres@gmail.com"><i class="fas fa-envelope"></i></a>
                 </div>
@@ -30,6 +30,12 @@
             <p>
                 Sóc una desenvolupadora frontend apassionada, actualment estudiant Desenvolupament d’Aplicacions Multiplataforma a Prat Educació. M’encanta crear aplicacions útils, intuïtives i boniques, i gaudeixo treballant en equip, aprenent tecnologies noves i participant en projectes socials.
             </p>
+            <ul>
+                <li>📍 <strong>Ubicació:</strong> Artà, Mallorca, Illes Balears</li>
+                <li>🎓 <strong>Formació complementària:</strong> Curs d’Estiu “Fes la teva pròpia app” (UAB), Curs de monitora + vetlladora NESE (Escola de Monitors Barcelona)</li>
+                <li>🏇 <strong>Certificació:</strong> Exàmens Galops 1 i 2 en equitació (RFHE, 2017)</li>
+                <li>🎯 <strong>Valors:</strong> Creativitat, pensament crític, iniciativa, empatia, organització i responsabilitat</li>
+            </ul>
         </section>
 
         <section id="skills" class="fade-in">
@@ -43,6 +49,7 @@
                 <div class="skill-card"><i class="fab fa-react"></i><h3>React</h3></div>
                 <div class="skill-card"><i class="fab fa-java"></i><h3>Java</h3></div>
                 <div class="skill-card"><i class="fab fa-python"></i><h3>Python</h3></div>
+                <div class="skill-card"><i class="fab fa-android"></i><h3>Desenvolupament Multiplataforma</h3></div>
             </div>
 
             <h3>🛠️ Eines i Pràctiques</h3>
@@ -52,7 +59,9 @@
                 <div class="skill-card"><i class="fab fa-github"></i><h3>GitHub</h3></div>
                 <div class="skill-card"><i class="fas fa-file-code"></i><h3>Overleaf</h3></div>
                 <div class="skill-card"><i class="fab fa-docker"></i><h3>Docker</h3></div>
-                <div class="skill-card"><i class="fas fa-project-diagram"></i><h3>Agile</h3></div>
+                <div class="skill-card"><i class="fas fa-project-diagram"></i><h3>Metodologies Àgils</h3></div>
+                <div class="skill-card"><i class="fas fa-layer-group"></i><h3>XML</h3></div>
+                <div class="skill-card"><i class="fab fa-node"></i><h3>Webpack</h3></div>
             </div>
         </section>
 
@@ -128,6 +137,11 @@
                 <h3>Curs d'Estiu "Fes la teva pròpia app"</h3>
                 <span class="institution">UAB</span>
                 <span class="date">2021 - 2022</span>
+            </div>
+            <div class="education-card">
+                <h3>Curs de Monitora + Vetlladora NESE</h3>
+                <span class="institution">Escola de Monitors Barcelona</span>
+                <span class="date">2024</span>
             </div>
         </section>
 
